--- a/ck-lib/src/main/res/values/strings.xml
+++ b/ck-lib/src/main/res/values/strings.xml
@@ -69,4 +69,9 @@
     <string name="icon_yaoyiyao">&#xe69b;</string>
     <string name="icon_announcement1">&#xe688;</string>
     <string name="icon_sendh">&#xe69f;</string>
+
+
+    <string name="shared_preference_main">main_shared_preference</string>
+    <string name="shared_preference_user_id">shared_preference_user_id</string>
+
 </resources>
