--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,11 @@
     <string name="shared_preference_client_info">shared_preference_client_info</string>
     <string name="supplement_info">完善个人信息</string>
     <string name="name">姓名</string>
+    <string name="male">男</string>
+    <string name="female">女</string>
+    <string name="club">选择会所</string>
     <string name="choose">选择</string>
     <string name="next">下一步</string>
     <string name="choose_bron_time">选择预产期</string>
+    <string name="artical_content">内容</string>
 </resources>
