--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="shared_preference_acctStatus">shared_preference_acctStatus</string>
     <string name="shared_preference_msgUrl">shared_preference_msgUrl</string>
     <string name="shared_preference_resourceUrl">shared_preference_resourceUrl</string>
-    <string name="shared_preference_client_info">shared_preference_client_info</string>
+    <string name="shared_preference_user_info">shared_preference_client_info</string>
     <string name="supplement_info">完善个人信息</string>
     <string name="name">姓名</string>
     <string name="male">男</string>
@@ -24,4 +24,8 @@
     <string name="next">下一步</string>
     <string name="choose_bron_time">选择预产期</string>
     <string name="artical_content">内容</string>
+    <string name="health">健康</string>
+    <string name="picture">照片</string>
+    <string name="ask_and_answer">问答</string>
+    <string name="grow_up">成长</string>
 </resources>
