--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BreedMemory</string>
+    <string name="app_name">孕育迹忆</string>
     <string name="host_page">首页</string>
     <string name="login">登录</string>
     <string name="phone_number">手机号</string>
@@ -44,4 +44,7 @@
     <string name="picture">照片</string>
     <string name="ask_and_answer">问答</string>
     <string name="grow_up">成长</string>
+    <string name="year">年</string>
+    <string name="month">月</string>
+    <string name="day">日</string>
 </resources>
