--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="month">月</string>
     <string name="day">日</string>
     <string name="search_club_info">查询会所信息</string>
+    <string name="grow_up_gas_station">成长加油站 &lt;font color="#F06C67"&gt;0&lt;/font&gt;元</string>
 </resources>
