昵称和电话修改页面(不是全部)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,9 @@
     <string name="person_info">个人信息</string>
     <string name="headpic">头像</string>
     <string name="nickname">昵称</string>
+    <string name="new_nickname">请输入昵称</string>
+    <string name="phone_num">手机号</string>
+    <string name="phone_num_input">请输入手机号</string>
     <string name="sex">性别</string>
     <string name="address">通讯地址</string>
     <string name="relaccount">亲友账号</string>
