--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,8 @@
     <string name="phone_num_input">请输入手机号</string>
     <string name="sex">性别</string>
     <string name="address">通讯地址</string>
+    <string name="address_change">修改地址</string>
+    <string name="address_change_hint">街道门牌信息</string>
     <string name="relaccount">亲友账号</string>
     <string name="mine">我的</string>
     <string name="sign_record">签到记录</string>
