--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,5 @@
     <string name="activity">活动</string>
     <string name="knowledge">知识</string>
     <string name="food">饮食</string>
+    <string name="viewpager_indicator">%1$d/%2$d</string>
 </resources>
