--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,13 @@
     <string name="knowledge">知识</string>
     <string name="food">饮食</string>
     <string name="viewpager_indicator">%1$d/%2$d</string>
+    <string name="search">搜索</string>
+    <string name="my_question">我的问题</string>
+    <string name="mother_zone">母亲专区</string>
+    <string name="baby_zone">婴儿专区</string>
+    <string name="zero_three_months">0-3个月</string>
+    <string name="three_months_one_year">3个月-1岁</string>
+    <string name="one_half_years">1岁-1岁半</string>
+    <string name="one_three_years">1岁半-3岁</string>
+    <string name="question_list">问题列表</string>
 </resources>
