--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="year">年</string>
     <string name="month">月</string>
     <string name="day">日</string>
+    <string name="day_tian">天</string>
     <string name="search_club_info">查询会所信息</string>
     <string name="grow_up_gas_station">成长加油站 &lt;font color="#F06C67"&gt;0&lt;/font&gt;元</string>
     <string name="message_tip">消息提醒</string>
@@ -64,4 +65,27 @@
     <string name="knowledge">知识</string>
     <string name="food">饮食</string>
     <string name="viewpager_indicator">%1$d/%2$d</string>
+    <string name="retract">收起</string>
+    <string name="baby">婴儿</string>
+    <string name="weight">体重</string>
+    <string name="head_size">头围</string>
+    <string name="height">身高</string>
+    <string name="temperature">体温</string>
+    <string name="chest">胸围</string>
+    <string name="blood_sugar">血糖</string>
+    <string name="blood_pressure">血压</string>
+    <string name="sleep">睡眠</string>
+    <string name="excretion">排泄</string>
+    <string name="physiology">生理性</string>
+    <string name="sunday">日</string>
+    <string name="born">出生</string>
+    <string name="normal">正常</string>
+    <string name="well">良好</string>
+    <string name="eat">进食</string>
+    <string name="drinked">喂水</string>
+    <string name="food_eat">食物摄入</string>
+    <string name="physiology_param">生理性参数</string>
+    <string name="aurigo">黄疸</string>
+    <string name="eczema">湿疹</string>
+    <string name="red_buttock">红臀</string>
 </resources>
