"知识","知识列表"页面完成，"首页"点击相应位置跳转到后面的fragment完成；

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,9 @@
     <string name="one_half_years">1岁-1岁半</string>
     <string name="one_three_years">1岁半-3岁</string>
     <string name="question_list">问题列表</string>
+    <string name="pregnancy">孕期</string>
+    <string name="after_child_birth">产后</string>
+    <string name="confinement">月子中</string>
+    <string name="confinement_after">月子后</string>
+    <string name="knowledge_list">知识列表</string>
 </resources>
