提交漏掉的字体索引

--- a/ck-lib/src/main/res/values/strings.xml
+++ b/ck-lib/src/main/res/values/strings.xml
@@ -40,35 +40,20 @@
     <string name="android_permission_READ_EXTERNAL_STORAGE">读取SD卡</string>
     <string name="android_permission_WRITE_EXTERNAL_STORAGE">修改SD卡</string>
 
-    <string name="icon_return">&#xe66d;</string>
-    <string name="icon_close">&#xe664;</string>
-    <string name="icon_confirm">&#xe665;</string>
-    <string name="icon_next">&#xe66e;</string>
-    <string name="icon_delete">&#xe657;</string>
-    <string name="icon_hot_spot">&#xe659;</string>
-    <string name="icon_program">&#xe65d;</string>
-    <string name="icon_talk">&#xe660;</string>
-    <string name="icon_myself">&#xe65a;</string>
-    <string name="icon_edit">&#xe678;</string>
-    <string name="icon_phone">&#xe67c;</string>
-    <string name="icon_detect">&#xe677;</string>
-    <string name="icon_we">&#xe682;</string>
-    <string name="icon_camera">&#xe673;</string>
-    <string name="icon_photo">&#xe67d;</string>
-    <string name="icon_search">&#xe666;</string>
-    <string name="icon_more">&#xe67a;</string>
-    <string name="icon_add">&#xe670;</string>
-    <string name="icon_select">&#xe686;</string>
-    <string name="icon_no_select">&#xe685;</string>
-    <string name="icon_down">&#xe669;</string>
-    <string name="icon_up">&#xe689;</string>
-    <string name="icon_user">&#xe681;</string>
-    <string name="icon_jq">&#xe695;</string>
-    <string name="icon_announcement">&#xe671;</string>
-    <string name="icon_calendar">&#xe68c;</string>
-    <string name="icon_yaoyiyao">&#xe69b;</string>
-    <string name="icon_announcement1">&#xe688;</string>
-    <string name="icon_sendh">&#xe69f;</string>
+    <string name="icon_return">&#xe607;</string>
+    <string name="icon_search">&#xe600;</string>
+    <string name="icon_collect">&#xe601;</string>
+    <string name="icon_share">&#xe603;</string>
+    <string name="icon_add">&#xe604;</string>
+    <string name="icon_add_circel">&#xe605;</string>
+    <string name="icon_me">&#xe606;</string>
+    <string name="icon_edit">&#xe609;</string>
+    <string name="icon_grow_up">&#xe60a;</string>
+    <string name="icon_menu">&#xe60b;</string>
+    <string name="icon_question">&#xe60c;</string>
+    <string name="icon_host">&#xe60d;</string>
+    <string name="icon_health">&#xe60e;</string>
+    <string name="icon_save">&#xe60f;</string>
 
 
     <string name="shared_preference_main">main_shared_preference</string>
