--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,7 +44,7 @@
     <string name="my_collect">我的收藏</string>
     <string name="photo_manage">照片管理</string>
     <string name="club_introduction">会所介绍</string>
-    <string name="my_exit">退出</string>
+    <string name="my_exit">退出登录</string>
     <string name="health">健康</string>
     <string name="picture">照片</string>
     <string name="ask_and_answer">问答</string>
