--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,7 +54,7 @@
     <string name="day">日</string>
     <string name="day_tian">天</string>
     <string name="search_club_info">查询会所信息</string>
-    <string name="grow_up_gas_station">成长加油站 &lt;font color="#F06C67"&gt;98,888&lt;/font&gt;元</string>
+    <string name="grow_up_gas_station">成长加油站 &lt;font color="#F06C67"&gt;%s&lt;/font&gt;元</string>
     <string name="message_tip">消息提醒</string>
     <string name="my_health">我的健康</string>
     <string name="health_analysis">健康情况分析</string>
@@ -108,4 +108,11 @@
     <string name="photo">照片</string>
     <string name="ask_question">提问</string>
     <string name="publish">发布</string>
+    <string name="edit_tab">编辑标签</string>
+    <string name="complete">完成</string>
+    <string name="add_tab">添加标签</string>
+    <string name="upload">上传</string>
+    <string name="owned_tabs">所持有标签</string>
+    <string name="cancel">取消</string>
+    <string name="confirm_upload">确认上传</string>
 </resources>
