--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,4 +117,6 @@
     <string name="confirm_upload">确认上传</string>
     <string name="upload_count_must_less_than_9">每次最多上传9张图片</string>
     <string name="init_file_failed">初始化文件失败</string>
+    <string name="all">全部</string>
+    <string name="education">教育</string>
 </resources>
