--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,4 +119,5 @@
     <string name="init_file_failed">初始化文件失败</string>
     <string name="all">全部</string>
     <string name="education">教育</string>
+    <string name="personal">个人</string>
 </resources>
