--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,4 +120,5 @@
     <string name="all">全部</string>
     <string name="education">教育</string>
     <string name="personal">个人</string>
+    <string name="sign_in">签到</string>
 </resources>
