--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,4 +121,5 @@
     <string name="education">教育</string>
     <string name="personal">个人</string>
     <string name="sign_in">签到</string>
+    <string name="collect_success">收藏成功</string>
 </resources>
