完成健康模块 添加右上角跳转加油站

--- a/ck-lib/src/main/res/values/strings.xml
+++ b/ck-lib/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="icon_triangle">&#xe602;</string>
     <string name="icon_next">&#xe610;</string>
     <string name="icon_calendar">&#xe608;</string>
+    <string name="icon_gas_station">&#xe611;</string>
 
 
     <string name="shared_preference_main">main_shared_preference</string>
