修复不能拍照 添加加油站跳转 修正权限 添加图片预览全屏 照片模块上啦加载限制 成长模块上拉加载限制 修复成长list点一下全部变色

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,4 +141,5 @@
     <string name="illness_name">疾病名称</string>
     <string name="input_illness">输入疾病</string>
     <string name="illness_record">病例报告</string>
+    <string name="select">选择</string>
 </resources>
