添加照片详情的收藏删除 添加文章收藏 添加问答收藏 实现我的消息界面和轮询请求

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,4 +144,6 @@
     <string name="select">选择</string>
     <string name="week">周</string>
     <string name="head">头围</string>
+    <string name="can_not_delete">不能删除</string>
+    <string name="delete_success">删除成功</string>
 </resources>
