完善所有统计图接入，并修复滑动事件与父控件冲突的情况 完善上传健康数据边界值判断 我的信息页面添加健康数据跳转 修复6.0以上上传头像没有请求权限的bug 添加签到弹出框（待优化） 添加提问问题无权限时可拨打电话

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="shared_preference_msgUrl">shared_preference_msgUrl</string>
     <string name="shared_preference_resourceUrl">shared_preference_resourceUrl</string>
     <string name="shared_preference_user_info">shared_preference_user_info</string>
+    <string name="shared_preference_sign_time">shared_preference_sign_time</string>
     <string name="supplement_info">完善个人信息</string>
     <string name="name">姓名</string>
     <string name="male">男</string>
@@ -149,4 +150,5 @@
     <string name="add">新增</string>
     <string name="time">时间</string>
     <string name="mother">妈妈</string>
+    <string name="please_input_real_data">请输入真实数据</string>
 </resources>
