微调部分界面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -151,4 +151,5 @@
     <string name="time">时间</string>
     <string name="mother">妈妈</string>
     <string name="please_input_real_data">请输入真实数据</string>
+    <string name="grow_up_info">成长小贴士</string>
 </resources>
