问题列表页面添加“宝宝”数据 修改手机调整字体变形问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,6 +154,7 @@
     <string name="grow_up_info">成长小贴士</string>
     <string name="submit">提交</string>
     <string name="question">问题</string>
+    <string name="vaccine">疫苗</string>
 
 
 
