--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -178,4 +178,5 @@
     <string name="share_success">分享成功</string>
     <string name="share_failed">分享失败</string>
     <string name="share_cancel">取消分享</string>
+    <string name="share_no_photo">分享图片不存在</string>
 </resources>
