修改统计图表背景色 添加统计图表未选中点颜色 增加地址查询与保存 修改默认网络任务session失效后不会触发onFail 修改保存数据到本地的方法返回值 修正上传病例出片传参问题 添加主页1分钟轮训激活接口 修正照片模块空数据bug 添加图标背景点击跳转健康信息 修复图片预览滑动冲突事件

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,6 +156,9 @@
     <string name="submit">提交</string>
     <string name="question">问题</string>
     <string name="vaccine">疫苗</string>
+    <string name="length_string">%scm</string>
+    <string name="weight_string">%skg</string>
+    <string name="temperature_string">%s℃</string>
 
 
 
@@ -179,4 +182,5 @@
     <string name="share_failed">分享失败</string>
     <string name="share_cancel">取消分享</string>
     <string name="share_no_photo">分享图片不存在</string>
+    <string name="share_url_invalidate">分享链接无效</string>
 </resources>
