--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -270,4 +270,5 @@
     </string>
     <string name="action_settings">Settings</string>
     <string name="say_something">说点什么吧</string>
+    <string name="month_food">月子餐</string>
 </resources>
