--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -170,7 +170,7 @@
     <string name="net_error_please_retry">网络连接失败,请重试!</string>
     <string name="tip">提示</string>
     <string name="retry">重试</string>
-    <string name="do_you_delete_me">真的要删除我吗？囧rz</string>
+    <string name="do_you_delete_me">真的要删除我吗？</string>
     <string name="give_up">放弃</string>
     <string name="please_wait_club_upload_data">请等待会所为您上传数据</string>
     <string name="share_success">分享成功</string>
