4. 健康图圈中的照片和文字能不能正常显示？目前我这边是不能，今天27日我帮你们录入了数据和图片，应该能看到 5.成长加油站图标要改一下和ios一样 实心图； 宝宝健康数据中删除 "大小便"，增加 "脐带"，有一个大小便的图标也要去掉； 6.会所介绍右上角添加“+” 7.健康数据页面大小便那项修改为脐带是否脱落；

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,7 +76,7 @@
     <string name="blood_sugar">血糖</string>
     <string name="blood_pressure">血压</string>
     <string name="sleep">睡眠</string>
-    <string name="excretion">大小便情况</string>
+    <string name="excretion">脐带是否脱落</string>
     <string name="physiology">生理性</string>
     <string name="sunday">日</string>
     <string name="born">出生</string>
