健康模块，“大小便”改为“脐带”

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,7 @@
     <string name="blood_pressure">血压</string>
     <string name="sleep">睡眠</string>
     <string name="excretion">脐带是否脱落</string>
+    <string name="cord">脐带</string>
     <string name="physiology">生理性</string>
     <string name="sunday">日</string>
     <string name="born">出生</string>
